# gocrash

./: Cargo.toml  README.adoc  run.sh
bin-linux/: pfexec
src/: main.rs
