[package]
name = "gocrash"
version = "0.1.0"
edition = "2021"
description = "run the Go test suite in a loop"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
license = "Apache-2.0"
repository = "https://github.com/davepacheco/gocrash"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
